destination section added

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h1>Wunderlust Travel</h1>
         <picture>
             <source
-                media="(min-width: 1264px)"
+                media="(min-width: 1024px)"
                 srcset="images/logo-L.png">
             <source
-                media="(max-width: 900px)"
+                media="(max-width: 780px)"
                 srcset="images/logo-M.png">
             <source
-                media="(max-width: 675px)"
+                media="(max-width: 320px)"
                 srcset="images/logo-S.png">
             <img
                 src="images/logo-L.png"
@@ -34,5 +34,54 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section id="destinations">
+            <h2>Majorca</h2>
+            <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
+
+        <picture>
+            <source
+                media="(min-width: 1024px)"
+                srcset="images/majorca-waves-L.png">
+            <source
+                media="(max-width: 780px)"
+                srcset="images/majorca-waves-M.png">
+            <source
+                media="(max-width: 320px)"
+                srcset="images/majorca-waves-S.png">
+            <img
+                src="images/majorca-waves-L.png"
+                alt="Beautiful aquamarine waters with white-capped waves crashing against a rocky cliff.">
+        </picture>
+        <picture>
+            <source
+                media="(min-width: 1024px)"
+                srcset="images/majorca-beach-L.png">
+            <source
+                media="(max-width: 780px)"
+                srcset="images/majorca-beach-M.png">
+            <source
+                media="(max-width: 320px)"
+                srcset="images/majorca-beach-S.png">
+            <img
+                src="images/majorca-waves-L.png"
+                alt="A white sandy beach with crystal-clear waters in a tropical paradise.">
+        </picture>
+        <picture>
+            <source
+                media="(min-width: 1024px)"
+                srcset="images/majorca-cove-L.png">
+            <source
+                media="(max-width: 780px)"
+                srcset="images/majorca-cove-M.png">
+            <source
+                media="(max-width: 320px)"
+                srcset="images/majorca-cove-S.png">
+            <img
+                src="images/majorca-cove-L.png"
+                alt="A small boat on a crystal-clear watery cove surrounded by a lush green tropical island.">
+        </picture>
+        </section>
+    </main>
 </body>
 </html>
