added insperation section

--- a/index.html
+++ b/index.html
@@ -142,6 +142,99 @@
                 </section>
             </section>
         </section>
+        <section id="inspirations">
+            <h3>Testimonials</h3>
+            <section>
+                <h4>Miranda Blake</h4>
+                <picture>
+                    <source
+                        media="(min-width: 1024px)"
+                        srcset="images/miranda-blake-L.png">
+                    <source
+                        media="(max-width: 780px)"
+                        srcset="images/miranda-blake-M.png">
+                    <source
+                        media="(max-width: 320px)"
+                        srcset="images/miranda-blake-S.png">
+                    <img
+                        src="images/miranda-blake-L.png"
+                        alt="A small boat on a crystal-clear watery cove surrounded by a lush green tropical island.">
+                </picture>
+                <p><span>Traveling From:</span> London, England</p>
+                <p><q>I traveled here for business, but my stay was extended. Now it is my home.</q></p>
+            </section>
+            <section>
+                <h4>Max Winter</h4>
+                <picture>
+                    <source
+                        media="(min-width: 1024px)"
+                        srcset="images/max-winter-L.png">
+                    <source
+                        media="(max-width: 780px)"
+                        srcset="images/max-winter-M.png">
+                    <source
+                        media="(max-width: 320px)"
+                        srcset="images/max-winter-S.png">
+                    <img
+                        src="images/max-winter-L.png"
+                        alt="A small boat on a crystal-clear watery cove surrounded by a lush green tropical island.">
+                </picture>
+                <p><span>Traveling From:</span> Berlin, Germany</p>
+                <p><q>Great escape from my reality. Beautiful sunsets, wonderful people, great beer.</q></p>
+            </section>
+            <section>
+                <h4>Inés Villegoes</h4>
+                <picture>
+                    <source
+                        media="(min-width: 1024px)"
+                        srcset="images/ines-villegoes-L.png">
+                    <source
+                        media="(max-width: 780px)"
+                        srcset="images/ines-villegoes-M.png">
+                    <source
+                        media="(max-width: 320px)"
+                        srcset="images/ines-villegoes-S.png">
+                    <img
+                        src="images/ines-villegoes-L.png"
+                        alt="A small boat on a crystal-clear watery cove surrounded by a lush green tropical island.">
+                </picture>
+                <p><span>Traveling From:</span> Barcelona, Spain</p>
+                <p><q>A very safe environment for all travelers.</q></p>
+            </section>
+            <section>
+                <h4>Carmen Lorenzo</h4>
+                <picture>
+                    <source
+                        media="(min-width: 1024px)"
+                        srcset="images/carmen-lorenzo-L.png">
+                    <source
+                        media="(max-width: 780px)"
+                        srcset="images/carmen-lorenzo-M.png">
+                    <source
+                        media="(max-width: 320px)"
+                        srcset="images/carmen-lorenzo-S.png">
+                    <img
+                        src="images/carmen-lorenzo-L.png"
+                        alt="A small boat on a crystal-clear watery cove surrounded by a lush green tropical island.">
+                </picture>
+                <p><span>Traveling From:</span> Madrid, Spain</p>
+                <p><q>Live, laugh, love-- everything you need in Majorca.</q></p>
+            </section>
+        </section>
+        <section id="special">
+            <h3>About Your Destination</h3>
+        </section>
+        <section id="contact">
+            <h3>Contact Us</h3>
+            <form>
+
+            </form>
+        </section>
     </main>
+    <footer>
+        <p></p>
+        <p><a href=""></a></p>
+        <p><a href=""></a></p>
+    </footer>
 </body>
 </html>
