--- a/index.html
+++ b/index.html
@@ -223,6 +223,48 @@
         </section>
         <section id="special">
             <h3>About Your Destination</h3>
+            <section>
+                <h4>Size</h4>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-ruler-2" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M17 3l4 4l-14 14l-4 -4z" />
+                    <path d="M16 7l-1.5 -1.5" />
+                    <path d="M13 10l-1.5 -1.5" />
+                    <path d="M10 13l-1.5 -1.5" />
+                    <path d="M7 16l-1.5 -1.5" />
+                </svg>
+                <p><span>Size:</span> 1,405 miles squared</p>
+            </section>
+            <section>
+                <h4>Elevation</h4>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <line x1="12" y1="21" x2="12" y2="3" />
+                    <path d="M15 6l-3 -3l-3 3" />
+                    <line x1="9" y1="21" x2="15" y2="21" />
+                </svg>
+                <p><span>Elevation:</span> 4,741 feet</p>
+            </section>
+            <section>
+                <h4>Location</h4>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <circle cx="12" cy="11" r="3" />
+                    <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                </svg>
+                <p><span>Location:</span> Mediterranean</p>
+            </section>
+            <section>
+                <h4>Population</h4>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <circle cx="9" cy="7" r="4" />
+                    <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
+                    <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+                    <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
+                </svg>
+                <p><span>Population:</span> 923,608</p>
+            </section>            
         </section>
         <section id="contact">
             <h3>Contact Us</h3>
