--- a/index.html
+++ b/index.html
@@ -268,8 +268,46 @@
         </section>
         <section id="contact">
             <h3>Contact Us</h3>
-            <form>
-
+            <form method="POST" action="https://wp.zybooks.com/form-viewer.php">
+                <label for="fname">First Name<span class="required">*</span></label>
+                <input type="text" id="fName" placeholder="Enter first name" name="first-name" required>
+                <label for="lname">Last Name<span class="required">*</span></label>
+                <input type="text" id="lName" placeholder="Enter last name" name="last-name" required>
+                <fieldset>
+                    <legend>Contact Method<span class="required">*</span></legend>
+                    <input type="radio" id="preferEmail" name="contact-method" value="preferEmail" required>
+                    <label for="preferEmail">Email</label>
+                    <input type="radio" id="preferText" name="contact-method" value="preferText" required>
+                    <label for="preferText">Text</label>
+                    <input type="radio" id="preferPhone" name="contact-method" value="preferPhone" required checked>
+                    <label for="preferPhone">Phone</label>
+                </fieldset>
+                <label for="email">Email Address<span class="required">*</span></label>
+                <input type="email" id="email" placeholder="Enter Email" name="email-address" required>
+                <label for="phone">Phone<span class="required">*</span></label>
+                <input type="tel" id="phone" placeholder="Enter telephone number" name="phone-number" required>
+                <label for="destination">Destination<span class="required">*</span></label>
+                <select id="destination" name="destination" required>
+                    <option>-- Select Destination --</option>
+                    <option>Barcelona</option>
+                    <option>Granada</option>
+                    <option>Ibiza</option>
+                    <option>Madrid</option>
+                    <option>Majorca</option>
+                    <option>Seville</option>
+                    <option>Tenerife</option>
+                    <option>Valencia</option>
+                </select>
+                <label for="travel_time">Travel Time<span class="required">*</span></label>
+                <select id="travel_time" name="travel-time">
+                    <option>-- Select Travel Time --</option>
+                    <option>Fall</option>
+                    <option>Winter</option>
+                    <option>Spring</option>
+                    <option>Summer</option>
+                    <option>Flexible</option>
+                </select>
+                <input type="submit" value="Submit">
             </form>
         </section>
     </main>
