--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
         </section>
     </main>
     <footer>
-        <p></p>
-        <p><a href=""></a></p>
-        <p><a href=""></a></p>
+        <p>Copyright 2021 Wunderlust</p>
+        <p><a href="#">Privacy Statement</a></p>
+        <p><a href="#">Terms of Service</a></p>
     </footer>
 </body>
 </html>
