added skip to main

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <a class="skip" href="#destinations">Skip to main</a>
         <h1>Wunderlust Travel</h1>
         <picture>
             <source
